--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@
 /customer-api-data/nb-configuration.xml
 /platform-api-data/target
 /platform-api-data/nb-configuration.xml
+/jquery-rest-api/target/
